# HOI-oversimplified

./: CMakeLists.txt  README.md  countries.h  hoi  main.cpp  program  run.sh  sfmlHex.h
headers/: ButtonBuilder.h  button.h  command.h  countries.h  exceptions.h  init.h  interface.h  popularity.h  sfmlHex.h  units.h
src/: ButtonBuilder.cpp  button.cpp  countries.cpp  init.cpp  interface.cpp  main.cpp
